<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipChildren="false"
    android:fitsSystemWindows="true"
    android:background="@color/main_color"
    tools:context=".MainAty">

    <FrameLayout
        android:id="@+id/main_vp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:background="@color/color_while"
        android:layout_weight="1"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/color_999"/>
    <RelativeLayout
        android:background="@color/color_while"
        android:clipChildren="false"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48">
        <RadioGroup
            android:background="@color/color_while"
            android:id="@+id/main_rg"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="48dp">
            <RadioButton
                android:layout_marginTop="7dp"
                android:drawableTop="@drawable/main_logo_home"
                android:text="@string/string_home"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:button="@null"
                android:textSize="@dimen/sp_12"
                android:layout_height="match_parent" />
            <RadioButton
                android:layout_marginTop="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dp_30"
                android:drawableTop="@drawable/main_logo_muchang"
                android:button="@null"
                android:gravity="center"
                android:text="@string/string_restaurants"
                android:textSize="@dimen/sp_12"
                android:layout_height="match_parent" />
            <RadioButton
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginTop="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/string_deals"
                android:drawableTop="@drawable/main_logo_shopping"
                android:gravity="center"
                android:button="@null"
                android:textSize="@dimen/sp_12"
                android:layout_height="match_parent" />
            <RadioButton
                android:layout_marginTop="7dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:drawableTop="@drawable/main_logo_myself"
                android:text="@string/string_profile"
                android:gravity="center"
                android:button="@null"
                android:textSize="@dimen/sp_12"
                android:layout_height="match_parent" />
        </RadioGroup>
        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:clipChildren="true"
            android:orientation="horizontal"
            android:layout_height="@dimen/dp_48">
            <RelativeLayout
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_90"
                android:layout_gravity="bottom">
                <ImageView
                    android:id="@+id/dd5"
                    android:layout_width="@dimen/dp_55"
                    android:layout_height="@dimen/dp_55"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/logo_home_add" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>