<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/main_color"
    android:orientation="vertical">
    <RelativeLayout
        android:background="@color/main_color"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48">
        <ImageView
            android:id="@+id/activity_passport_cerification_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/left_back_black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_20" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_passport_certification"
            android:textColor="@color/color_while"
            android:textSize="@dimen/sp_16"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/color_while">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_12"
            android:text="@string/string_pass_port"
            android:textColor="@color/color_999"
            android:layout_margin="@dimen/dp_25"/>
        <RelativeLayout
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:background="@drawable/car_rz_bg"
            android:layerType="software">
            <ImageView
                android:layout_width="@dimen/dp_75"
                android:layout_height="@dimen/dp_60"
                android:background="@mipmap/logo_picture"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_180"
            android:background="@drawable/car_rz_bg"
            android:layerType="software">
            <ImageView
                android:layout_width="@dimen/dp_75"
                android:layout_height="@dimen/dp_60"
                android:background="@mipmap/logo_picture"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:text="@string/string_submit"
            android:textColor="@color/color_while"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:textSize="@dimen/sp_14"
            android:gravity="center"
            android:background="@drawable/ouners_tv_bg"/>
    </LinearLayout>

</LinearLayout>